# CRUD_api_Postgres

./: Cargo.toml  docker-compose.yml  sql query
src/: database.rs  main.rs  services.rs
src/models/: mod.rs  todomodels.rs
