[package]
name = "task2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "3.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.85"
chrono = "0.4.23"
sqlx = { version = "0.6.2", features = ["runtime-async-std-native-tls", "postgres"] }
dotenv = "0.15.0"

[profile.dev.package.sqlx-macros]
opt-level = 3